# XrMT

./: .gitignore  Cargo.toml  README.md  check_all.sh  rustfmt.toml  testimpls.py  xrmt.code-workspace
.cargo/: config.toml
crates/bugtrack/: Cargo.toml  README.md
crates/bugtrack/src/: bugs.rs  lib.rs
crates/coco/: Cargo.toml
crates/coco/src/: future.rs  lib.rs  runtime.rs  signals.rs  stxa.rs
crates/coco/src/runtime/: container.rs  data.rs  entry.rs  link.rs  pool.rs  queue.rs  state.rs
crates/coco/src/runtime/driver/: unix.rs  windows.rs
crates/coco/src/signals/: handler.rs  signals.rs
crates/coco/src/stxa/: fs.rs  io.rs  net.rs  os.rs  process.rs  unix.rs  windows.rs
crates/coco/src/stxa/io/: read.rs  write.rs
crates/coco/src/stxa/os/: linux.rs
crates/coco/src/stxa/unix/: fs.rs  net.rs
crates/coco/src/stxa/windows/: fs.rs  net.rs
crates/core/: Cargo.toml
crates/core/builtins/: Cargo.toml  README.md
crates/core/builtins/src/: asm.rs  lib.rs  other.rs  x64.rs
crates/core/crypt/: Cargo.toml  README.md
crates/core/crypt/src/: lib.rs
crates/core/io/: Cargo.toml  README.md
crates/core/io/src/: borrow.rs  copy.rs  error.rs  lib.rs  read.rs  seek.rs  write.rs
crates/core/io/src/alloc/: read.rs  write.rs
crates/core/src/: lib.rs
crates/core/text/: Cargo.toml  README.md
crates/core/text/src/: lib.rs  numbers.rs  parse.rs
crates/core/time/: Cargo.toml  README.md
crates/core/time/src/: lib.rs
crates/crypto/: crypto.rs
crates/crypto/crypto/: hmac.rs  keypair.rs  p521.rs  table.rs
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/objects/: Cargo.toml
crates/objects/data/: Cargo.toml
crates/objects/data/src/: base64.rs  blob.rs  chunk.rs  fiber.rs  lib.rs  text.rs
crates/objects/data/src/blob/: blob.rs  buffer.rs  slice.rs
crates/objects/hash/: Cargo.toml
crates/objects/hash/src/: fnv.rs  hmac.rs  lib.rs  sha256.rs
crates/objects/memory/: Cargo.toml  README.md
crates/objects/memory/src/: container.rs  lib.rs
crates/objects/random/: Cargo.toml  README.md
crates/objects/random/src/: lib.rs
crates/objects/src/: lib.rs
crates/stx/: Cargo.toml
crates/stx/net/: Cargo.toml
crates/stx/net/src/: lib.rs  resolve.rs  socket.rs  tcp.rs  udp.rs
crates/stx/src/: compat.rs  env.rs  ffi.rs  fs.rs  io.rs  lib.rs  net.rs  os.rs  path.rs  prelude.rs  process.rs  runtime.rs  sync.rs  thread.rs  time.rs
crates/stx/src/extra/: filter.rs  fs.rs  io.rs  process.rs  thread.rs
crates/stx/src/os/: ffi.rs  fs.rs  io.rs  process.rs
crates/stx/src/sync/: barrier.rs  cond.rs  extra.rs  lazy.rs  mpmc.rs  mpsc.rs  mutex.rs  once.rs  once_lock.rs  rwlock.rs
crates/stx/src/sync/extra/: chan.rs  event.rs  flag.rs  group.rs  lazy.rs  lazy_signal.rs  mutant.rs  refs.rs  semaphore.rs  signal.rs  timer.rs
crates/winapi/: Cargo.toml
crates/winapi/fnv/: Cargo.toml
crates/winapi/fnv/src/: lib.rs
crates/winapi/src/: alloc.rs  env.rs  errors.rs  functions.rs  info.rs  lib.rs  loader.rs  path.rs  registry.rs  stdio.rs  structs.rs  utils.rs  wow.rs
crates/winapi/src/functions/: advapi32.rs  helpers.rs  kernel32.rs  ntdll.rs  simple.rs  winsock.rs
crates/winapi/src/loader/: advapi32.rs  crypt32.rs  gdi32.rs  kernel32.rs  ntdll.rs  simple.rs  user32.rs  winsock.rs  wtsapi32.rs
crates/winapi/src/structs/: data.rs  debug.rs  handles.rs  io.rs  iters.rs  lazy.rs  loader.rs  memory.rs  namespaces.rs  network.rs  peb.rs  process.rs  registry.rs  remote.rs  security.rs  session.rs  string.rs  system.rs  window.rs  wow.rs
crates/winapi/src/structs/string/: ansi.rs  char.rs  env.rs  unicode.rs  wchar.rs
src/: c2.rs  com.rs  data.rs  device.rs  env.rs  fs.rs  lib.rs  main.rs  net.rs  process.rs  sync.rs  thread.rs  time.rs  util.rs
src/c2/: cfg.rs  client.rs  connect.rs  error.rs  event.rs  mux.rs  ops.rs  session.rs  state.rs  task.rs  transform.rs  vars.rs  wrapper.rs
src/c2/cfg/: connect.rs  group.rs  profile.rs  transform.rs  workhours.rs  wrapper.rs
src/c2/event/: chan.rs  queue.rs  task.rs  thread.rs
src/c2/task/: os.rs  process.rs
src/c2/task/os/: unix.rs  windows.rs
src/com/: flag.rs  limits.rs  netadv.rs  packet.rs
src/com/netadv/: ip.rs  pipe.rs  tcp.rs  udp.rs
src/com/netadv/pipe/: windows.rs
src/compat/: ffi.rs  io.rs  path.rs  prelude.rs
src/compat/builtins/: amd64.rs  ops.rs  standard.rs
src/compat/rust/: borrow.rs  error.rs  ffi.rs  path.rs  read.rs  seek.rs  write.rs
src/data/: base64.rs  blob.rs  chunk.rs  crypto.rs  hasher.rs  memory.rs  rand.rs  str.rs  time.rs
src/data/crypto/: hmac.rs  keypair.rs  p521.rs  table.rs
src/device/: filter.rs  id.rs  machine.rs  network.rs  rand.rs  winapi.rs
src/device/filter/: unix.rs  windows.rs
src/device/machine/: arch.rs  capabilities.rs  os.rs
src/device/machine/local/: unix.rs  windows.rs
src/device/sys/: unix.rs  wasm.rs  windows.rs
src/device/winapi/: alloc.rs  checks.rs  errors.rs  functions.rs  helpers.rs  info.rs  load.rs  loader.rs  patch.rs  path.rs  registry.rs  screen.rs  stdio.rs  structs.rs  wow.rs
src/device/winapi/functions/: advapi32.rs  crypt32.rs  dbghelp.rs  gdi32.rs  iphlpapi.rs  kernel32.rs  netapi32.rs  ntdll.rs  structs.rs  user32.rs  userenv.rs  winsock.rs  wtsapi32.rs
src/device/winapi/loader/: advapi32.rs  amsi.rs  crypt32.rs  dbghelp.rs  gdi32.rs  iphlpapi.rs  kernel32.rs  mappings.rs  netapi32.rs  ntdll.rs  psapi.rs  user32.rs  userenv.rs  winhttp.rs  winsock.rs  wtsapi32.rs
src/device/winapi/std/: env.rs  fs.rs  net.rs  process.rs  thread.rs  time.rs
src/device/winapi/std/stx/: compat.rs  enhanced.rs  ffi.rs  io.rs  ops.rs  stx.rs
src/device/winapi/std/sync/: barrier.rs  event.rs  group.rs  lazy.rs  lazylock.rs  mpsc.rs  mutant.rs  mutex.rs  (+3 more)
src/device/winapi/structs/: data.rs  debug.rs  handles.rs  list.rs  memory.rs  network.rs  process.rs  registry.rs  screen.rs  security.rs  sessions.rs  string.rs  system.rs
src/sync/: arc.rs  event.rs  group.rs  lazy.rs
src/util/: crypt.rs  log.rs  numbers.rs
testing/: Cargo.toml  build.sh
testing/.cargo/: config.toml
testing/src/: main.rs  testing.rs
(+5 files in other folders)
