[package]
name                = "xrmt"
# build               = "build.rs"
readme              = "README.md"
license             = "GPL 3.0"
version             = "0.0.1"
edition             = "2021"
authors             = ["iDigitalFlame"]
publish             = false
homepage            = "https://github.com/iDigitalFlame/xrmt"
repository          = "https://github.com/iDigitalFlame/xrmt"
description         = ""

# [lib]
# path                = "src/lib.rs"
# crate-type          = ["cdylib"]

[features]
default             = []
std                 = []
bugs                = []
snap                = []
crypt               = ["implant"]
implant             = []
nosweep             = []
swap                = []
ews                 = []
pie                 = []
nokeyset            = []
noproxy             = []
heap_track          = []
multiproxy          = []
limit_tiny          = []
limit_small         = []
limit_large         = []
limit_nofrag        = []
limit_medium        = []

[profile.dev]
panic               = "abort"

[profile.release]
lto                 = false
panic               = "abort"
debug               = false
strip               = true
opt-level           = 3
overflow-checks     = false
debug-assertions    = false

[dependencies]
hmac-sha256         = { version = "1.1.6", default-features = false }

[target.'cfg(unix)'.dependencies]
libc                = { version = "0.2.141",  default-features = false }
interfaces          = { version = "0.0.8", default-features = false }
