[package]
name                = "xrmt"
# build               = "build.rs"
readme              = "README.md"
license             = "GPL 3.0"
version             = "0.0.1"
edition             = "2021"
authors             = ["iDigitalFlame"]
publish             = false
homepage            = "https://github.com/iDigitalFlame/xrmt"
repository          = "https://github.com/iDigitalFlame/xrmt"
description         = ""

# [lib]
# path                = "src/lib.rs"
# crate-type          = ["cdylib"]

[features]
default             = []
std                 = []
bugs                = []
snap                = []
crypt               = ["strip"]
strip               = []
ews                 = []
pie                 = []
no_proxy            = []
heap_track          = ["bugs"]
limit_tiny          = []
limit_small         = []
limit_large         = []
limit_medium        = []
limit_no_frag       = []

[profile.dev]
panic               = "abort"

[profile.release]
lto                 = false
panic               = "abort"
debug               = false
strip               = true
opt-level           = 3
overflow-checks     = false
debug-assertions    = false

[target.'cfg(unix)'.dependencies]
libc                = { version = "0.2.155",  default-features = false, features = ["extra_traits"] }
