[package]
name             = "xrmt"
readme           = "README.md"
license          = "GPL 3.0"
version          = "0.0.1"
edition          = "2024"
authors          = [ "iDigitalFlame" ]
publish          = false
homepage         = "https://github.com/iDigitalFlame/xrmt"
repository       = "https://github.com/iDigitalFlame/xrmt"
description      = ""

[lib]
path             = "src/lib.rs"

[features]
default          = [                                                                                                                                         ]
bugs             = [           "xrmt-bugtrack/bugs", "xrmt-coco/bugs",                     "xrmt-objects/bugs",  "xrmt-stx/bugs" ,      "xrmt-winapi/bugs"   ]
compat           = [                                                                                             "xrmt-stx/compat"                           ]
crypt            = [ "strip",                        "xrmt-coco/crypt", "xrmt-core/crypt", "xrmt-objects/crypt", "xrmt-stx/crypt",      "xrmt-winapi/crypt"  ]
no-support       = [                                                                                             "xrmt-stx/no-support"                       ]
pie              = [                                 "xrmt-coco/pie",                                            "xrmt-stx/pie",        "xrmt-winapi/pie"    ]
print            = [                                                                                             "xrmt-stx/print"                            ]
std              = [                                 "xrmt-coco/std",   "xrmt-core/std",   "xrmt-objects/std"  , "xrmt-stx/std",        "xrmt-winapi/std"    ]
strip            = [                                 "xrmt-coco/strip", "xrmt-core/strip", "xrmt-objects/strip", "xrmt-stx/strip",      "xrmt-winapi/strip"  ]

#ews             = []
#no_proxy        = []
#limit_tiny      = []
#limit_small     = []
#limit_large     = []
#limit_medium    = []
#limit_no_frag   = []

[dependencies]
xrmt-bugtrack    = { path = "./crates/bugtrack", default-features = false, features = [] }
xrmt-coco        = { path = "./crates/coco",     default-features = true,  features = [] }
xrmt-core        = { path = "./crates/core",     default-features = false, features = [] }
xrmt-objects     = { path = "./crates/objects",  default-features = false, features = [] }
xrmt-stx         = { path = "./crates/stx",      default-features = true,  features = [] }
xrmt-winapi      = { path = "./crates/winapi",   default-features = true,  features = [] }
